--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "eslint": "^9.2.0",
-    "eslint-config-next": "^14.0.3",
+    "eslint": "^8.0.0",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3",
+    "tailwindcss-3d": "^1.0.6",
     "typescript": "^5.4.5"
   }
 }
